Creating the core code
* Added Checkout
* Added PricingRules
* Added Product
* Added Utilities
* Added main
* Added npm start command

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Interview test for Seek",
   "main": "main.js",
   "scripts": {
+    "start": "node main.js",
   },
   "author": "Jeffrey Wong",
   "license": "ISC",
